# ontology_to_schema

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_docker.sh  pyproject.toml  run_docker.sh  run_plugin.sh
config/: agent_doco.yaml
imports/: types.yaml
onto_definition/ofn/: bido.ofn  bio.ofn  biro.ofn  c4o.ofn  cc.ofn  cito.ofn  co.ofn  datacite.ofn  dc.ofn  dcterms.ofn  deo.ofn  doap.ofn  doco.ofn  doco_.ofn  fabio.ofn  fivestars.ofn  foaf.ofn  fr.ofn  frapo.ofn  frbr.ofn  grddl.ofn  label.ofn  orb.ofn  ov.ofn  owl.ofn  pattern.ofn  po.ofn  pro.ofn  pso.ofn  pwo.ofn  rdf.ofn  rdfs.ofn  sao.ofn  scoro.ofn  sdo.ofn  skos.ofn  skos1.ofn  sro.ofn  vann.ofn  vs.ofn  (+1 more)
onto_definition/original_format/: bido-core.ttl  bido-standard-bibliometric-measures.ttl  bido.ttl  bio.rdf  biro.ttl  c4o.ttl  cc.rdf  cc.ttl  cito.ttl  co.owl  datacite.ttl  dc.ttl  doco.owl  fabio.ttl  fabio.xml  fivestars.ttl  fr.ttl  frapo.ttl  frbr-core.rdf  frbr.ttl  grddl.xml  label.rdf  orb.xml  pattern.owl  pro.ttl  pso.ttl  pwo.ttl  scoro.ttl  sdo.rdfs  skos1.xml  sro.xml  sw-vocab-status.xml  vann.xml
ontology_to_schema/: __init__.py  agent.py  agent_assign_slot.py  agent_relevant_slot.py  cli.py  gen_schema.py  util.py
tests/: test_agent.py  test_convert.py
