[tool.poetry]
name = "ontology-to-schema"
version = "0.1.0"
description = ""
authors = ["Ji Liu <liuji1031@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^7.1.3"
schema-automator = "^0.5.3"
atomic-agents = "^1.0.23"
openai = "^1.65.5"
groq = "^0.18.0"
quantulum3 = {extras = ["classifier"], version = "^0.9.2"}
typer = "^0.15.2"
types-pyyaml = "^6.0.12.20241230"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.1.0"
bumpversion = "^0.6.0"
types-pyyaml = "^6.0.12.20241230"

[tool.poetry.scripts]
ontology-to-schema = "ontology_to_schema.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
